# crucible

./: .dockerignore  .env.example  .gitignore  .kimi-review.yml  .kimi-worker.patch  ADAPT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  GOVERNANCE.md  LICENSE  Makefile  README.md  README_OBSOLETE.md  SECURITY.md  SUPPORT.md  docker-compose.yml  go.work  go.work.sum  patch_package_json.sh  test_node24.go
.Jules/: palette.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  bug.yml  config.yml  feature.yml  question.md  support.yml
.github/workflows/: ci.yml  claude-review.yml  claude.yml  client-sdk-drift.yml  compatibility.yml  kimi-review.yml  new-tool-smoke.yml  no-binaries.yml  worker-conformance.yml
.jules/: bolt.md  palette.md  sentinel.md
clients/: README.md  openapi.json
clients/go/: client.go  client_test.go  errors.go  go.mod  jobs.go  jobs_test.go  webhook.go  webhook_internal_test.go  webhook_test.go
clients/python/: pyproject.toml
clients/python/crucible/: client.py
clients/python/crucible_client/: __init__.py  client.py  errors.py  jobs.py  webhook.py
clients/python/tests/: test_client.py  test_jobs.py  test_webhook.py
clients/typescript/: package-lock.json  package.json  tsconfig.json
dashboard/: .dockerignore  .env.example  .gitignore  Dockerfile  auth.config.ts  auth.ts  middleware.ts  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vitest.config.ts
deploy/: backup.sh  deploy.sh  hetzner-bootstrap.sh
docs/: api-reference.md  api-stability.md  compatibility.md  licensing.md  pricing.md  releases.md
docs-internal/: REVIEW.md  full-code-review-2026-05-16.md  further-steps-2026-06-28.md  test-report-2026-05-29.md  vies-research.md
ee/: LICENSE.md  README.md
gateway/: Dockerfile  go.mod  go.sum
plans/: 20260526-ci-redis-service.md  20260526-gateway-graceful-shutdown.md  20260605-worker-resilience.md
scripts/: acceptance-run.sh  conformance-run.sh  doctor.sh  gen-clients.sh  new-tool.sh  seed-dev.sh  smoke-new-tool.sh  smoke-rust-worker.sh
work-orders/: 20260702-wire-deps-db.md  20260703-usage-self-api.md  20260703-webhook-event-subscriptions.md  20260704-customer-webhook-management-api.md  20260704-deliveries-idor-test.md  20260708-clone-acceptance-kit.md  20260709-sdk-python-worker.md  20260710-route-response-schema.md
workers/: README.md  active
workers/sdk-python/: README.md  pyproject.toml
workers/sdk-python/conformance/: test_fixture_conformance.py
workers/sdk-python/crucible/: __init__.py
workers/sdk-python/tests/: test_signature.py
workers/sdk-rust/: Cargo.toml
workers/sdk-rust/conformance/: Cargo.toml
workers/sdk-rust/conformance/src/: lib.rs
workers/sdk-rust/conformance/tests/: fixture_conformance.rs
workers/sdk-rust/examples/: hello.rs
workers/sdk-rust/src/: lib.rs  server.rs
(+438 files in other folders)
