[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "crucible-worker-sdk"
version = "0.1.0"
description = "Stdlib-only Python SDK for Crucible workers"
requires-python = ">=3.9"
license = "MIT"
dependencies = []

[tool.setuptools.packages.find]
include = ["crucible*"]
