[package]
name = "crucible-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"

[lib]
name = "crucible_sdk"
path = "src/lib.rs"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

