[package]
name = "crucible-sdk-conformance"
version = "0.1.0"
edition = "2021"
license = "MIT"

# No library target — this crate only provides integration tests.

[dev-dependencies]
crucible-sdk = { path = ".." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
axum = "0.7"
